--- a/CongratulatorWeb/Views/Person/Delete.cshtml
+++ b/CongratulatorWeb/Views/Person/Delete.cshtml
@@ -21,6 +21,6 @@
     <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Cancel</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Cancel</a>
     </form>
 </div>
