--- a/CongratulatorWeb/Views/Person/Edit.cshtml
+++ b/CongratulatorWeb/Views/Person/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model CongratulatorWeb.Entities.Person
+﻿@using CongratulatorWeb.Models.Enums;
+@model CongratulatorWeb.Entities.Person
 @{
     ViewData["Title"] = "Edit";
 }
@@ -11,22 +12,24 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="BirthDate" class="control-label"></label>
                 <input asp-for="BirthDate" class="form-control" type="date" />
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label asp-for="Relationship" class="control-label"></label>
-                <input asp-for="Relationship" class="form-control" />
+                <select asp-for="Relationship" asp-items="Html.GetEnumSelectList<RelationshipType>()" class="form-control">
+                    <option value="">Choose relationship type</option>
+                </select>
                 <span asp-validation-for="Relationship" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -34,8 +37,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to list</a> |
-    <a asp-action="UploadPhoto" asp-route-id="@Model.Id">Load photo</a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Back to list</a> |
+    <a asp-action="UploadPhoto" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Load photo</a>
 </div>
 
 @section Scripts {
