Added new features and edited work of controller

--- a/CongratulatorWeb/Views/Person/Edit.cshtml
+++ b/CongratulatorWeb/Views/Person/Edit.cshtml
@@ -38,7 +38,7 @@
 
 <div>
     <a asp-action="Index" class="btn btn-outline-secondary">Back to list</a> |
-    <a asp-action="UploadPhoto" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Load photo</a>
+    <a asp-action="EditPhoto" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Edit photo</a>
 </div>
 
 @section Scripts {
