--- a/CongratulatorWeb/Views/Person/Index.cshtml
+++ b/CongratulatorWeb/Views/Person/Index.cshtml
@@ -40,7 +40,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-light">Edit</a> |
-                    <a asp-action="UploadPhoto" asp-route-id="@item.Id" class="btn btn-light">Load photo</a> |
+                    <a asp-action="EditPhoto" asp-route-id="@item.Id" class="btn btn-light">Edit photo</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-light">Delete</a>
                 </td>
             </tr>
