--- a/CongratulatorWeb/Views/Person/EditPhoto.cshtml
+++ b/CongratulatorWeb/Views/Person/EditPhoto.cshtml
@@ -1,14 +1,14 @@
-﻿@model CongratulatorWeb.Models.UploadPhotoViewModel
+﻿@model CongratulatorWeb.Models.EditPhotoViewModel
 @{
-    ViewData["Title"] = "Load photo";
+    ViewData["Title"] = "Edit photo";
 }
 
-<h1>Load photo for @Model.PersonId</h1>
+<h1>Edit @Model.Name photo</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UploadPhoto" method="post" enctype="multipart/form-data">
+        <form asp-action="EditPhoto" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PersonId" />
             <div class="form-group mb-2">
@@ -17,19 +17,26 @@
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group mb-2">
-                <label asp-for="Photo" class="control-label"></label>
-                <img id="photoPreview" src="" alt="Preview" style="max-width: 200px; max-height: 200px; display: none; border: 1px solid #ccc;" />
-            </div>
-            <div class="form-group mb-2">
-                <input type="submit" value="Load" class="btn btn-primary" />
+                <label asp-for="Photo" class="control-label d-block">Photo</label>
+                <img src="@Model.CurrentPhotoPath" alt="Preview" style="max-width: 200px; max-height: 200px; border: 1px solid #ccc;" id="photoPreview" />
+            </div>                        
+            <div class="form-group mb-2 d-flex gap-2">
+                <input type="submit" value="Load" class="btn btn-primary" />                
             </div>
         </form>
+        <div class="form-group mb-2">
+            <form asp-action="DeletePhoto" method="post" style="display: inline;">
+                <input type="hidden" name="id" value="@Model.PersonId" />
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+        </div>        
     </div>
 </div>
 
 <div>
     <a asp-action="Index" class="btn btn-outline-secondary">Back to list</a> |
     <a asp-action="Edit" asp-route-id="@Model.PersonId" class="btn btn-outline-secondary">Back to editing</a>
+
 </div>
 
 @section Scripts {
